# trend_classifier

./: .bandit  .bumpversion.cfg  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  VISIBILITY_CHECKLIST.md  cliff.toml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  tox.ini  tox.ini.old
.github/workflows/: black.yml  ci.yml  codecov.yml  docs.yml  flake8.yml  pytest.yml  release.yml  security.yml  tests_with_tox.yml
doc/: index.html  search.js  trend_classifier.html
doc/trend_classifier/: configuration.html  index.html  metrics.html  segment.html  segmentation.html  types.html
docs/: configuration.html  contributing.md  index.html  index.md  metrics.html  models.html  segment.html  segmentation.html  trend_classifier.html  types.html  visuals.html
docs/concepts/: algorithms.md  architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: choose-detector.md  export-results.md  setup-github-pages.md  tune-parameters.md
docs/reference/: changelog.md
docs/reference/api/: config.md  detectors.md  segment.md  segmenter.md
docs/trend_classifier/: configuration.html  models.html  segmentation.html
docs/tutorials/: 02_segment_analysis.ipynb  03_visualization.ipynb  04_configuration.ipynb  05_classification.ipynb  06_advanced_optimization.ipynb  07_detector_comparison.ipynb  index.md
notebooks/: 01_quickstart.ipynb  01_quickstart.py  02_segment_analysis.ipynb  02_segment_analysis.py  03_visualization.ipynb  03_visualization.py  04_configuration.ipynb  04_configuration.py  05_classification.ipynb  05_classification.py  06_advanced_optimization.ipynb  06_advanced_optimization.py  07_detector_comparison.ipynb  07_detector_comparison.py  _archive_trend_detection.ipynb  demo.ipynb  demo.py  example_for_readme.ipynb  example_for_readme.py  optimization.ipynb  optimization.py  simple_trend_detection.ipynb  simple_trend_detection.py
src/trend_classifier/: __init__.py  configuration.py  metrics.py  segment.py  segmentation.py  visuals.py
src/trend_classifier/detectors/: __init__.py  base.py  bottom_up.py  pelt.py  sliding_window.py
tests/: apple_stock_data.csv  test_detectors.py  test_readme_example.py  test_segment.py  test_segmentation.py
tests/signals/: signal_1.json  signal_2.json
tox-reqs/: all.txt  coverage.txt  flake8.txt  mypy.txt
trend_classifier/: __init__.py  configuration.py  models.py  segment.py  segmentation.py  trend_detection.py  types.py  visuals.py
utils/: signal_drawing.html
