[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "tox>=4.14.1",
    "devtools>=0.12.2",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pdoc3>=0.10.0",
    "portray>=1.8.0",
    "yfinance>=0.2.40",
    "tox-pyenv-redux>=1.1.0",
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.2.2",
    "pytest-icdiff>=0.9",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=4.1.0",
    "pytest-sugar>=1.0.0",
    "yfinance>=0.2.40",
]

[tool.pdm.build]
includes = []

[tool.black]
target-version = ["py38"]

[project]
name = "trend-classifier"
version = "0.1.12"
description = "Package for automated signal segmentation, trend classification and analysis."
authors = [
    { name = "Krystian Safjan", email = "ksafjan@gmail.com" },
]
dependencies = [
    "matplotlib",
    "pydantic",
    "numpy",
    "pandas",
    "eval-type-backport",
]
requires-python = "<=3.13,>=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["trend", "timeseries", "classification", "segmentation", "analysis", "algotrading", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"]
[project.urls]
"Source" = "https://github.com/izikeros/trend_classifier"
"Bug Tracker" = "https://github.com/izikeros/trend_classifier/issues"
