[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-classifier"
version = "0.2.3"
description = "Package for automated signal segmentation, trend classification and analysis."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Krystian Safjan", email = "ksafjan@gmail.com"}
]
keywords = ["trend", "timeseries", "classification", "segmentation", "analysis", "algotrading", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "matplotlib>=3.5.0",
    "pydantic>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/izikeros/trend_classifier"
Documentation = "https://izikeros.github.io/trend_classifier"
Repository = "https://github.com/izikeros/trend_classifier"
"Bug Tracker" = "https://github.com/izikeros/trend_classifier/issues"
Changelog = "https://github.com/izikeros/trend_classifier/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_classifier"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a23",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.6.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "bump-my-version>=0.28.0",
    "git-cliff>=2.0.0",
    "commitizen>=4.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "yfinance>=0.2.40",
]

[tool.bumpversion]
current_version = "0.2.3"
tag = false
commit = false
tag_name = "v{new_version}"
message = "chore(release): bump version {current_version} → {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/trend_classifier/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.3"
tag_format = "v$version"
allowed_prefixes = ["Merge", "Revert", "Initial"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=src/trend_classifier",
    "--cov-branch",
    "--cov-report=term-missing",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
